# DecisionTree_ID3

./: README.md  build_script.sh
DecisionTreeLibrary/: CMakeLists.txt  DecisionTreeLibraryConfig.cmake.in
DecisionTreeLibrary/include/: Attribute.h  Node.h  ReadFile.h  Tree.h
DecisionTreeLibrary/src/: Attribute.cpp  Node.cpp  ReadFile.cpp  Tree.cpp
DecisionTreeLibrary/test/: CMakeLists.txt
DecisionTreeLibrary/test/testFiles/: attrTest.txt  entropyTest.txt  testVector.txt
DecisionTreeLibrary/test/unit/: Test.cpp  TestFunc.h
RandomForest/: CMakeLists.txt  agaricus-lepiota.data  main.cpp  randomForest.cpp  randomForest.h  testFile.data  threadPool.cpp  threadPool.h
